Fixex wrong padding in select

--- a/src/components/form/custom-select/styles.scss
+++ b/src/components/form/custom-select/styles.scss
@@ -9,6 +9,7 @@
 
   .react-select__control {
     min-width: 200px;
+    min-height: 30px;
     background: transparent;
     border: 0;
     border-radius: 0;
@@ -21,14 +22,14 @@
     }
 
     > .react-select__value-container {
-      padding: 0 $space-1 * 2 $space-1 0;
+      padding: 0 $space-1 * 2 0 0;
 
       &.react-select__value-container--has-value {
 
         > .react-select__single-value {
           position: relative;
           top: 0;
-          transform: translate(0, $space-1);
+          transform: translate(0, 0);
           margin: 0;
           color: currentColor;
           font-weight: 500;
@@ -43,7 +44,7 @@
           > .react-select__clear-indicator {
             position: absolute;
             right: 0;
-            top: calc(50% + 4px);
+            top: 50%;
             padding: 0;
             transform: translate(0, -50%);
             color: currentColor;
@@ -75,7 +76,7 @@
 
       .react-select__input {
         position: absolute;
-        top: calc(50% + 4px);
+        top: 50%;
         left: 0;
         transform: translate(0, -50%);
         color: currentColor;
@@ -93,7 +94,7 @@
         @include triangle(5px, currentColor, 'down');
         content: '';
         position: absolute;
-        top: calc(50% + (#{$space-1} / 2));
+        top: 50%;
         left: calc(50% - #{$space-1});
         transform: translate(-50%, -50%)
       }
